# aictx

./: .gitignore  AGENTS.md  AGENTS.override.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  aictx_add_finalize_command_prompt.md  aictx_v5_3_closed_loop_execution_contract_prompt.md  change_journal.md  fast_lookup.json  index.json  note_template.md  prompt_codex_aictx_v1.md  protocol.md  pyproject.toml  symptoms.json  user_preferences.json
.ai_context_engine/area_memory/: areas.json
.ai_context_engine/memory/: workflow_learnings.jsonl
.ai_context_engine/metrics/: agent_execution_log.jsonl  agent_execution_status.json  execution_feedback.jsonl  execution_logs.jsonl  weekly_summary.json
.claude/: settings.json
common/: user_working_preferences.md
delta/: task_packet_schema.json
docs/: AREA_MEMORY.md  BENCHMARK_QUICKSTART.md  CLEANUP.md  DEMO.md  EXECUTION_CONTRACTS.md  EXECUTION_SUMMARY.md  EXTRACTION_ROADMAP.md  FAILURE_MEMORY.md  HANDOFFS.md  INSTALLATION.md  LIMITATIONS.md  PHASE2_NOTES.md  PORTABILITY.md  QUICKSTART.md  RELEASE_CHECKLIST.md  REPOMAP.md  SAFETY.md  STRATEGY_MEMORY.md  TECHNICAL_OVERVIEW.md  UPGRADE.md  USAGE.md  WORK_STATE.md
scripts/: boot.py  compact.py  detect_stale.py  ensure_gitignore.py  failure_memory.py  global_metrics.py  library.py  migrate_ai_context_engine.py  model_route.py  note_new.py  packet.py  prune.py  query.py  task_memory.py  touch.py
tests/: test_context_ranking.py  test_continuity_brief.py  test_continuity_context.py  test_continuity_contract.py  test_continuity_final_summary.py  test_continuity_metrics.py  test_continuity_storage.py  test_continuity_summary.py  test_contract_compliance.py  test_cross_memory_reuse.py  test_decision_load.py  test_decision_memory.py  test_error_events.py  test_failure_aware_context.py  test_failure_memory_upgrade.py  test_handoff_load.py  test_handoff_memory.py  test_handoff_operational.py  test_memory_hygiene.py  test_messages.py  test_next_command.py  test_portability.py  test_real_usage_quality.py  test_repomap_artifacts.py  test_repomap_cli.py  test_repomap_continuity.py  test_repomap_discovery.py  test_repomap_incremental.py  test_repomap_init.py  test_repomap_install.py  test_repomap_prepare.py  test_repomap_provider.py  test_repomap_query.py  test_repomap_refresh.py  test_repomap_report.py  test_resume_command.py  test_reuse_confidence.py  test_runtime_compact.py  test_semantic_repo_load.py  test_semantic_repo_memory.py  (+9 more)
(+62 files in other folders)
