[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictx"
version = "0.1.0"
description = "Portable multi-LLM context engine bootstrapper"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Santi Santamaria" }
]
dependencies = []

[project.scripts]
aictx = "aictx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
