[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictx"
version = "0.2.0"
description = "Portable multi-LLM context engine bootstrapper"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Santi Santamaria" }
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 4 - Beta"
]
dependencies = []

[project.scripts]
aictx = "aictx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aictx" = ["templates/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
