[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aictx"
version = "4.3.0"
description = "Repo-local continuity runtime for coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Santi Santamaria" }
]
license = "MIT"
keywords = ["ai", "llm", "coding-agents", "continuity", "agent-memory", "repo-local", "developer-tools", "execution-memory", "codex", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Development Status :: 4 - Beta"
]
dependencies = []

[project.optional-dependencies]
repomap = [
  "tree-sitter-language-pack>=0.13.0,<1.0.0"
]

[project.urls]
Homepage = "https://github.com/oldskultxo/aictx"
Repository = "https://github.com/oldskultxo/aictx"
Issues = "https://github.com/oldskultxo/aictx/issues"

[project.scripts]
aictx = "aictx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aictx" = ["templates/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
